--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,7 +4,7 @@
   "name": "this particular extension",
   "version": "1.0",
 
-  "description": "A graveyard",
+  "description": "extension",
 
   // "background":
   //   {
